resolve code issues